Commands/compiling_error.txt
C:\Users\pev\Documents\TEC\Roborregos\JARVIS @HOME\AISA\C++\Robocup-Home\Commands\main.cpp: In function 'bool addToActions(Command&, std::unordered_map<std::basic_string<char>, std::basic_string<char> >)':
C:\Users\pev\Documents\TEC\Roborregos\JARVIS @HOME\AISA\C++\Robocup-Home\Commands\main.cpp:16:54: error: 'splitCommands' was not declared in this scope
   bool multipleSentences = splitCommands(sentenceTags);
                                                      ^
C:\Users\pev\Documents\TEC\Roborregos\JARVIS @HOME\AISA\C++\Robocup-Home\Commands\main.cpp:23:4: error: return-statement with no value, in function returning 'bool' [-fpermissive]
    return;
    ^
C:\Users\pev\Documents\TEC\Roborregos\JARVIS @HOME\AISA\C++\Robocup-Home\Commands\main.cpp: In function 'void parseSentence(std::vector<std::basic_string<char> >, Command&, int)':
C:\Users\pev\Documents\TEC\Roborregos\JARVIS @HOME\AISA\C++\Robocup-Home\Commands\main.cpp:121:46: error: 'splitIntoSentences' was not declared in this scope
   sentences[i]=splitIntoSentences(newSentence);
                                              ^
C:\Users\pev\Documents\TEC\Roborregos\JARVIS @HOME\AISA\C++\Robocup-Home\Commands\main.cpp:123:35: error: no matching function for call to 'std::vector<std::basic_string<char> >::insert(std::string&, int&)'
   sentences.insert(newSentence,++i);
                                   ^
C:\Users\pev\Documents\TEC\Roborregos\JARVIS @HOME\AISA\C++\Robocup-Home\Commands\main.cpp:123:35: note: candidates are:
In file included from C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/vector:69:0,
                 from C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/queue:61,
                 from C:\Users\pev\Documents\TEC\Roborregos\JARVIS @HOME\AISA\C++\Robocup-Home\Commands\Command.h:4,
                 from C:\Users\pev\Documents\TEC\Roborregos\JARVIS @HOME\AISA\C++\Robocup-Home\Commands\main.cpp:3:
C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/bits/vector.tcc:107:5: note: std::vector<_Tp, _Alloc>::iterator std::vector<_Tp, _Alloc>::insert(std::vector<_Tp, _Alloc>::const_iterator, const value_type&) [with _Tp = std::basic_string<char>; _Alloc = std::allocator<std::basic_string<char> >; std::vector<_Tp, _Alloc>::iterator = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; typename std::_Vector_base<_Tp, _Alloc>::pointer = std::basic_string<char>*; std::vector<_Tp, _Alloc>::const_iterator = __gnu_cxx::__normal_iterator<const std::basic_string<char>*, std::vector<std::basic_string<char> > >; typename __gnu_cxx::__alloc_traits<typename std::_Vector_base<_Tp, _Alloc>::_Tp_alloc_type>::const_pointer = const std::basic_string<char>*; std::vector<_Tp, _Alloc>::value_type = std::basic_string<char>]
     vector<_Tp, _Alloc>::
     ^
C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/bits/vector.tcc:107:5: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'std::vector<std::basic_string<char> >::const_iterator {aka __gnu_cxx::__normal_iterator<const std::basic_string<char>*, std::vector<std::basic_string<char> > >}'
In file included from C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/vector:64:0,
                 from C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/queue:61,
                 from C:\Users\pev\Documents\TEC\Roborregos\JARVIS @HOME\AISA\C++\Robocup-Home\Commands\Command.h:4,
                 from C:\Users\pev\Documents\TEC\Roborregos\JARVIS @HOME\AISA\C++\Robocup-Home\Commands\main.cpp:3:
C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/bits/stl_vector.h:1014:7: note: std::vector<_Tp, _Alloc>::iterator std::vector<_Tp, _Alloc>::insert(std::vector<_Tp, _Alloc>::const_iterator, std::vector<_Tp, _Alloc>::value_type&&) [with _Tp = std::basic_string<char>; _Alloc = std::allocator<std::basic_string<char> >; std::vector<_Tp, _Alloc>::iterator = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; typename std::_Vector_base<_Tp, _Alloc>::pointer = std::basic_string<char>*; std::vector<_Tp, _Alloc>::const_iterator = __gnu_cxx::__normal_iterator<const std::basic_string<char>*, std::vector<std::basic_string<char> > >; typename __gnu_cxx::__alloc_traits<typename std::_Vector_base<_Tp, _Alloc>::_Tp_alloc_type>::const_pointer = const std::basic_string<char>*; std::vector<_Tp, _Alloc>::value_type = std::basic_string<char>]
       insert(const_iterator __position, value_type&& __x)
       ^
C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/bits/stl_vector.h:1014:7: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'std::vector<std::basic_string<char> >::const_iterator {aka __gnu_cxx::__normal_iterator<const std::basic_string<char>*, std::vector<std::basic_string<char> > >}'
C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/bits/stl_vector.h:1031:7: note: std::vector<_Tp, _Alloc>::iterator std::vector<_Tp, _Alloc>::insert(std::vector<_Tp, _Alloc>::const_iterator, std::initializer_list<_Tp>) [with _Tp = std::basic_string<char>; _Alloc = std::allocator<std::basic_string<char> >; std::vector<_Tp, _Alloc>::iterator = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; typename std::_Vector_base<_Tp, _Alloc>::pointer = std::basic_string<char>*; std::vector<_Tp, _Alloc>::const_iterator = __gnu_cxx::__normal_iterator<const std::basic_string<char>*, std::vector<std::basic_string<char> > >; typename __gnu_cxx::__alloc_traits<typename std::_Vector_base<_Tp, _Alloc>::_Tp_alloc_type>::const_pointer = const std::basic_string<char>*]
       insert(const_iterator __position, initializer_list<value_type> __l)
       ^
C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/bits/stl_vector.h:1031:7: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'std::vector<std::basic_string<char> >::const_iterator {aka __gnu_cxx::__normal_iterator<const std::basic_string<char>*, std::vector<std::basic_string<char> > >}'
C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/bits/stl_vector.h:1051:7: note: std::vector<_Tp, _Alloc>::iterator std::vector<_Tp, _Alloc>::insert(std::vector<_Tp, _Alloc>::const_iterator, std::vector<_Tp, _Alloc>::size_type, const value_type&) [with _Tp = std::basic_string<char>; _Alloc = std::allocator<std::basic_string<char> >; std::vector<_Tp, _Alloc>::iterator = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; typename std::_Vector_base<_Tp, _Alloc>::pointer = std::basic_string<char>*; std::vector<_Tp, _Alloc>::const_iterator = __gnu_cxx::__normal_iterator<const std::basic_string<char>*, std::vector<std::basic_string<char> > >; typename __gnu_cxx::__alloc_traits<typename std::_Vector_base<_Tp, _Alloc>::_Tp_alloc_type>::const_pointer = const std::basic_string<char>*; std::vector<_Tp, _Alloc>::size_type = unsigned int; std::vector<_Tp, _Alloc>::value_type = std::basic_string<char>]
       insert(const_iterator __position, size_type __n, const value_type& __x)
       ^
C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/bits/stl_vector.h:1051:7: note:   candidate expects 3 arguments, 2 provided
C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/bits/stl_vector.h:1095:9: note: template<class _InputIterator, class> std::vector<_Tp, _Alloc>::iterator std::vector<_Tp, _Alloc>::insert(std::vector<_Tp, _Alloc>::const_iterator, _InputIterator, _InputIterator) [with _InputIterator = _InputIterator; <template-parameter-2-2> = <template-parameter-1-2>; _Tp = std::basic_string<char>; _Alloc = std::allocator<std::basic_string<char> >]
         insert(const_iterator __position, _InputIterator __first,
         ^
C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/bits/stl_vector.h:1095:9: note:   template argument deduction/substitution failed:
C:\Users\pev\Documents\TEC\Roborregos\JARVIS @HOME\AISA\C++\Robocup-Home\Commands\main.cpp:123:35: note:   cannot convert 'newSentence' (type 'std::string {aka std::basic_string<char>}') to type 'std::vector<std::basic_string<char> >::const_iterator {aka __gnu_cxx::__normal_iterator<const std::basic_string<char>*, std::vector<std::basic_string<char> > >}'
   sentences.insert(newSentence,++i);
                                   ^
